[CDH4] IMPALA-1019: Fix cancellation path in io mgr for cached reads.

Change-Id: I33eea3caffb1e687af8c3e6054aa48b97cc0db73
Reviewed-on: http://gerrit.ent.cloudera.com:8080/2756
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins